Added Spring Boot Actuator for monitoring and fixed some issues